- Box primitive instantiation - Unnecessary boxing - Use diamond inference on declaration-initialization - Use generics