@@ -70,7 +70,7 @@ public final class Stub {
     
     private static final class DefaultStubImplementation implements StubImplementation {
     
-        private static final Map/*<Object,Delegate>*/ STUB_TO_DELEGATE = new WeakHashMap();
+        private static final Map<Object, StubDelegate> STUB_TO_DELEGATE = new WeakHashMap();
         
         @Override
         public Object create(Class[] intfs) {
@@ -140,9 +140,9 @@ public final class Stub {
             Class[] paramTypes = method.getParameterTypes();
 
             if ("hashCode".equals(methodName)) {
-                return new Integer(System.identityHashCode(proxy));
+                return System.identityHashCode(proxy);
             } else if ("equals".equals(methodName) && paramTypes.length == 1 && paramTypes[0] == Object.class) {
-                return Boolean.valueOf(args[0] == proxy);
+                return args[0] == proxy;
             }
                 
             Class retClass = method.getReturnType();
@@ -153,15 +153,15 @@ public final class Stub {
                 } else if (retClass == Short.TYPE) {
                     return (short)0;
                 } else if (retClass == Integer.TYPE) {
-                    return new Integer(0);
+                    return 0;
                 } else if (retClass == Long.TYPE) {
-                    return new Long(0L);
+                    return 0L;
                 } else if (retClass == Float.TYPE) {
-                    return new Float(0);
+                    return Float.valueOf(0);
                 } else if (retClass == Double.TYPE) {
-                    return new Double(0.0);
+                    return 0.0;
                 } else if (retClass == Character.TYPE) {
-                    return new Character('\0');
+                    return '\0';
                 } else if (retClass == Boolean.TYPE) {
                     return Boolean.FALSE;
                 }
